generated/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    FUNCTION
    ELSE

Grammar

Rule 0     S' -> programme
Rule 1     programme -> statement
Rule 2     programme -> statement programme
Rule 3     statement -> assignation
Rule 4     statement -> structure
Rule 5     statement -> condition
Rule 6     statement -> css
Rule 7     statement -> keyframes
Rule 8     statement -> animation
Rule 9     statement -> frame
Rule 10    statement -> LOG expression
Rule 11    condition -> IF expression { programme }
Rule 12    structure -> FOR expression TO expression BY expression { programme }
Rule 13    css -> @ STRING
Rule 14    keyframes -> KEYFRAMES { programme }
Rule 15    animation -> ANIMATION ( STRING , STRING ) { programme }
Rule 16    frame -> FRAME ( expression ) { programme }
Rule 17    expression -> expression ADD_OP expression
Rule 18    expression -> expression MUL_OP expression
Rule 19    expression -> expression MOD expression
Rule 20    expression -> expression IS expression
Rule 21    expression -> expression < expression
Rule 22    expression -> expression > expression
Rule 23    expression -> NUMBER
Rule 24    expression -> IDENTIFIER
Rule 25    expression -> STRING
Rule 26    expression -> ( expression )
Rule 27    expression -> ADD_OP expression
Rule 28    assignation -> IDENTIFIER : expression

Terminals, with rules where they appear

(                    : 15 16 26
)                    : 15 16 26
,                    : 15
:                    : 28
<                    : 21
>                    : 22
@                    : 13
ADD_OP               : 17 27
ANIMATION            : 15
BY                   : 12
ELSE                 : 
FOR                  : 12
FRAME                : 16
FUNCTION             : 
IDENTIFIER           : 24 28
IF                   : 11
IS                   : 20
KEYFRAMES            : 14
LOG                  : 10
MOD                  : 19
MUL_OP               : 18
NUMBER               : 23
STRING               : 13 15 15 25
TO                   : 12
error                : 
{                    : 11 12 14 15 16
}                    : 11 12 14 15 16

Nonterminals, with rules where they appear

animation            : 8
assignation          : 3
condition            : 5
css                  : 6
expression           : 10 11 12 12 12 16 17 17 18 18 19 19 20 20 21 21 22 22 26 27 28
frame                : 9
keyframes            : 7
programme            : 2 11 12 14 15 16 0
statement            : 1 2
structure            : 4

Parsing method: LALR

state 0

    (0) S' -> . programme
    (1) programme -> . statement
    (2) programme -> . statement programme
    (3) statement -> . assignation
    (4) statement -> . structure
    (5) statement -> . condition
    (6) statement -> . css
    (7) statement -> . keyframes
    (8) statement -> . animation
    (9) statement -> . frame
    (10) statement -> . LOG expression
    (28) assignation -> . IDENTIFIER : expression
    (12) structure -> . FOR expression TO expression BY expression { programme }
    (11) condition -> . IF expression { programme }
    (13) css -> . @ STRING
    (14) keyframes -> . KEYFRAMES { programme }
    (15) animation -> . ANIMATION ( STRING , STRING ) { programme }
    (16) frame -> . FRAME ( expression ) { programme }

    LOG             shift and go to state 1
    IDENTIFIER      shift and go to state 14
    FOR             shift and go to state 10
    IF              shift and go to state 13
    @               shift and go to state 9
    KEYFRAMES       shift and go to state 16
    ANIMATION       shift and go to state 11
    FRAME           shift and go to state 4

    assignation                    shift and go to state 15
    frame                          shift and go to state 2
    condition                      shift and go to state 12
    keyframes                      shift and go to state 3
    animation                      shift and go to state 5
    css                            shift and go to state 8
    statement                      shift and go to state 7
    structure                      shift and go to state 6
    programme                      shift and go to state 17

state 1

    (10) statement -> LOG . expression
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MUL_OP expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression IS expression
    (21) expression -> . expression < expression
    (22) expression -> . expression > expression
    (23) expression -> . NUMBER
    (24) expression -> . IDENTIFIER
    (25) expression -> . STRING
    (26) expression -> . ( expression )
    (27) expression -> . ADD_OP expression

    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 18
    STRING          shift and go to state 22
    (               shift and go to state 19
    ADD_OP          shift and go to state 21

    expression                     shift and go to state 23

state 2

    (9) statement -> frame .

    LOG             reduce using rule 9 (statement -> frame .)
    IDENTIFIER      reduce using rule 9 (statement -> frame .)
    FOR             reduce using rule 9 (statement -> frame .)
    IF              reduce using rule 9 (statement -> frame .)
    @               reduce using rule 9 (statement -> frame .)
    KEYFRAMES       reduce using rule 9 (statement -> frame .)
    ANIMATION       reduce using rule 9 (statement -> frame .)
    FRAME           reduce using rule 9 (statement -> frame .)
    }               reduce using rule 9 (statement -> frame .)
    $end            reduce using rule 9 (statement -> frame .)


state 3

    (7) statement -> keyframes .

    LOG             reduce using rule 7 (statement -> keyframes .)
    IDENTIFIER      reduce using rule 7 (statement -> keyframes .)
    FOR             reduce using rule 7 (statement -> keyframes .)
    IF              reduce using rule 7 (statement -> keyframes .)
    @               reduce using rule 7 (statement -> keyframes .)
    KEYFRAMES       reduce using rule 7 (statement -> keyframes .)
    ANIMATION       reduce using rule 7 (statement -> keyframes .)
    FRAME           reduce using rule 7 (statement -> keyframes .)
    }               reduce using rule 7 (statement -> keyframes .)
    $end            reduce using rule 7 (statement -> keyframes .)


state 4

    (16) frame -> FRAME . ( expression ) { programme }

    (               shift and go to state 24


state 5

    (8) statement -> animation .

    LOG             reduce using rule 8 (statement -> animation .)
    IDENTIFIER      reduce using rule 8 (statement -> animation .)
    FOR             reduce using rule 8 (statement -> animation .)
    IF              reduce using rule 8 (statement -> animation .)
    @               reduce using rule 8 (statement -> animation .)
    KEYFRAMES       reduce using rule 8 (statement -> animation .)
    ANIMATION       reduce using rule 8 (statement -> animation .)
    FRAME           reduce using rule 8 (statement -> animation .)
    }               reduce using rule 8 (statement -> animation .)
    $end            reduce using rule 8 (statement -> animation .)


state 6

    (4) statement -> structure .

    LOG             reduce using rule 4 (statement -> structure .)
    IDENTIFIER      reduce using rule 4 (statement -> structure .)
    FOR             reduce using rule 4 (statement -> structure .)
    IF              reduce using rule 4 (statement -> structure .)
    @               reduce using rule 4 (statement -> structure .)
    KEYFRAMES       reduce using rule 4 (statement -> structure .)
    ANIMATION       reduce using rule 4 (statement -> structure .)
    FRAME           reduce using rule 4 (statement -> structure .)
    }               reduce using rule 4 (statement -> structure .)
    $end            reduce using rule 4 (statement -> structure .)


state 7

    (1) programme -> statement .
    (2) programme -> statement . programme
    (1) programme -> . statement
    (2) programme -> . statement programme
    (3) statement -> . assignation
    (4) statement -> . structure
    (5) statement -> . condition
    (6) statement -> . css
    (7) statement -> . keyframes
    (8) statement -> . animation
    (9) statement -> . frame
    (10) statement -> . LOG expression
    (28) assignation -> . IDENTIFIER : expression
    (12) structure -> . FOR expression TO expression BY expression { programme }
    (11) condition -> . IF expression { programme }
    (13) css -> . @ STRING
    (14) keyframes -> . KEYFRAMES { programme }
    (15) animation -> . ANIMATION ( STRING , STRING ) { programme }
    (16) frame -> . FRAME ( expression ) { programme }

    $end            reduce using rule 1 (programme -> statement .)
    }               reduce using rule 1 (programme -> statement .)
    LOG             shift and go to state 1
    IDENTIFIER      shift and go to state 14
    FOR             shift and go to state 10
    IF              shift and go to state 13
    @               shift and go to state 9
    KEYFRAMES       shift and go to state 16
    ANIMATION       shift and go to state 11
    FRAME           shift and go to state 4

    assignation                    shift and go to state 15
    frame                          shift and go to state 2
    condition                      shift and go to state 12
    keyframes                      shift and go to state 3
    animation                      shift and go to state 5
    css                            shift and go to state 8
    statement                      shift and go to state 7
    structure                      shift and go to state 6
    programme                      shift and go to state 25

state 8

    (6) statement -> css .

    LOG             reduce using rule 6 (statement -> css .)
    IDENTIFIER      reduce using rule 6 (statement -> css .)
    FOR             reduce using rule 6 (statement -> css .)
    IF              reduce using rule 6 (statement -> css .)
    @               reduce using rule 6 (statement -> css .)
    KEYFRAMES       reduce using rule 6 (statement -> css .)
    ANIMATION       reduce using rule 6 (statement -> css .)
    FRAME           reduce using rule 6 (statement -> css .)
    }               reduce using rule 6 (statement -> css .)
    $end            reduce using rule 6 (statement -> css .)


state 9

    (13) css -> @ . STRING

    STRING          shift and go to state 26


state 10

    (12) structure -> FOR . expression TO expression BY expression { programme }
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MUL_OP expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression IS expression
    (21) expression -> . expression < expression
    (22) expression -> . expression > expression
    (23) expression -> . NUMBER
    (24) expression -> . IDENTIFIER
    (25) expression -> . STRING
    (26) expression -> . ( expression )
    (27) expression -> . ADD_OP expression

    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 18
    STRING          shift and go to state 22
    (               shift and go to state 19
    ADD_OP          shift and go to state 21

    expression                     shift and go to state 27

state 11

    (15) animation -> ANIMATION . ( STRING , STRING ) { programme }

    (               shift and go to state 28


state 12

    (5) statement -> condition .

    LOG             reduce using rule 5 (statement -> condition .)
    IDENTIFIER      reduce using rule 5 (statement -> condition .)
    FOR             reduce using rule 5 (statement -> condition .)
    IF              reduce using rule 5 (statement -> condition .)
    @               reduce using rule 5 (statement -> condition .)
    KEYFRAMES       reduce using rule 5 (statement -> condition .)
    ANIMATION       reduce using rule 5 (statement -> condition .)
    FRAME           reduce using rule 5 (statement -> condition .)
    }               reduce using rule 5 (statement -> condition .)
    $end            reduce using rule 5 (statement -> condition .)


state 13

    (11) condition -> IF . expression { programme }
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MUL_OP expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression IS expression
    (21) expression -> . expression < expression
    (22) expression -> . expression > expression
    (23) expression -> . NUMBER
    (24) expression -> . IDENTIFIER
    (25) expression -> . STRING
    (26) expression -> . ( expression )
    (27) expression -> . ADD_OP expression

    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 18
    STRING          shift and go to state 22
    (               shift and go to state 19
    ADD_OP          shift and go to state 21

    expression                     shift and go to state 29

state 14

    (28) assignation -> IDENTIFIER . : expression

    :               shift and go to state 30


state 15

    (3) statement -> assignation .

    LOG             reduce using rule 3 (statement -> assignation .)
    IDENTIFIER      reduce using rule 3 (statement -> assignation .)
    FOR             reduce using rule 3 (statement -> assignation .)
    IF              reduce using rule 3 (statement -> assignation .)
    @               reduce using rule 3 (statement -> assignation .)
    KEYFRAMES       reduce using rule 3 (statement -> assignation .)
    ANIMATION       reduce using rule 3 (statement -> assignation .)
    FRAME           reduce using rule 3 (statement -> assignation .)
    }               reduce using rule 3 (statement -> assignation .)
    $end            reduce using rule 3 (statement -> assignation .)


state 16

    (14) keyframes -> KEYFRAMES . { programme }

    {               shift and go to state 31


state 17

    (0) S' -> programme .



state 18

    (24) expression -> IDENTIFIER .

    ADD_OP          reduce using rule 24 (expression -> IDENTIFIER .)
    MUL_OP          reduce using rule 24 (expression -> IDENTIFIER .)
    MOD             reduce using rule 24 (expression -> IDENTIFIER .)
    IS              reduce using rule 24 (expression -> IDENTIFIER .)
    <               reduce using rule 24 (expression -> IDENTIFIER .)
    >               reduce using rule 24 (expression -> IDENTIFIER .)
    LOG             reduce using rule 24 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 24 (expression -> IDENTIFIER .)
    FOR             reduce using rule 24 (expression -> IDENTIFIER .)
    IF              reduce using rule 24 (expression -> IDENTIFIER .)
    @               reduce using rule 24 (expression -> IDENTIFIER .)
    KEYFRAMES       reduce using rule 24 (expression -> IDENTIFIER .)
    ANIMATION       reduce using rule 24 (expression -> IDENTIFIER .)
    FRAME           reduce using rule 24 (expression -> IDENTIFIER .)
    $end            reduce using rule 24 (expression -> IDENTIFIER .)
    }               reduce using rule 24 (expression -> IDENTIFIER .)
    TO              reduce using rule 24 (expression -> IDENTIFIER .)
    {               reduce using rule 24 (expression -> IDENTIFIER .)
    )               reduce using rule 24 (expression -> IDENTIFIER .)
    BY              reduce using rule 24 (expression -> IDENTIFIER .)


state 19

    (26) expression -> ( . expression )
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MUL_OP expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression IS expression
    (21) expression -> . expression < expression
    (22) expression -> . expression > expression
    (23) expression -> . NUMBER
    (24) expression -> . IDENTIFIER
    (25) expression -> . STRING
    (26) expression -> . ( expression )
    (27) expression -> . ADD_OP expression

    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 18
    STRING          shift and go to state 22
    (               shift and go to state 19
    ADD_OP          shift and go to state 21

    expression                     shift and go to state 32

state 20

    (23) expression -> NUMBER .

    ADD_OP          reduce using rule 23 (expression -> NUMBER .)
    MUL_OP          reduce using rule 23 (expression -> NUMBER .)
    MOD             reduce using rule 23 (expression -> NUMBER .)
    IS              reduce using rule 23 (expression -> NUMBER .)
    <               reduce using rule 23 (expression -> NUMBER .)
    >               reduce using rule 23 (expression -> NUMBER .)
    LOG             reduce using rule 23 (expression -> NUMBER .)
    IDENTIFIER      reduce using rule 23 (expression -> NUMBER .)
    FOR             reduce using rule 23 (expression -> NUMBER .)
    IF              reduce using rule 23 (expression -> NUMBER .)
    @               reduce using rule 23 (expression -> NUMBER .)
    KEYFRAMES       reduce using rule 23 (expression -> NUMBER .)
    ANIMATION       reduce using rule 23 (expression -> NUMBER .)
    FRAME           reduce using rule 23 (expression -> NUMBER .)
    $end            reduce using rule 23 (expression -> NUMBER .)
    }               reduce using rule 23 (expression -> NUMBER .)
    TO              reduce using rule 23 (expression -> NUMBER .)
    {               reduce using rule 23 (expression -> NUMBER .)
    )               reduce using rule 23 (expression -> NUMBER .)
    BY              reduce using rule 23 (expression -> NUMBER .)


state 21

    (27) expression -> ADD_OP . expression
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MUL_OP expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression IS expression
    (21) expression -> . expression < expression
    (22) expression -> . expression > expression
    (23) expression -> . NUMBER
    (24) expression -> . IDENTIFIER
    (25) expression -> . STRING
    (26) expression -> . ( expression )
    (27) expression -> . ADD_OP expression

    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 18
    STRING          shift and go to state 22
    (               shift and go to state 19
    ADD_OP          shift and go to state 21

    expression                     shift and go to state 33

state 22

    (25) expression -> STRING .

    ADD_OP          reduce using rule 25 (expression -> STRING .)
    MUL_OP          reduce using rule 25 (expression -> STRING .)
    MOD             reduce using rule 25 (expression -> STRING .)
    IS              reduce using rule 25 (expression -> STRING .)
    <               reduce using rule 25 (expression -> STRING .)
    >               reduce using rule 25 (expression -> STRING .)
    LOG             reduce using rule 25 (expression -> STRING .)
    IDENTIFIER      reduce using rule 25 (expression -> STRING .)
    FOR             reduce using rule 25 (expression -> STRING .)
    IF              reduce using rule 25 (expression -> STRING .)
    @               reduce using rule 25 (expression -> STRING .)
    KEYFRAMES       reduce using rule 25 (expression -> STRING .)
    ANIMATION       reduce using rule 25 (expression -> STRING .)
    FRAME           reduce using rule 25 (expression -> STRING .)
    $end            reduce using rule 25 (expression -> STRING .)
    }               reduce using rule 25 (expression -> STRING .)
    TO              reduce using rule 25 (expression -> STRING .)
    {               reduce using rule 25 (expression -> STRING .)
    )               reduce using rule 25 (expression -> STRING .)
    BY              reduce using rule 25 (expression -> STRING .)


state 23

    (10) statement -> LOG expression .
    (17) expression -> expression . ADD_OP expression
    (18) expression -> expression . MUL_OP expression
    (19) expression -> expression . MOD expression
    (20) expression -> expression . IS expression
    (21) expression -> expression . < expression
    (22) expression -> expression . > expression

    LOG             reduce using rule 10 (statement -> LOG expression .)
    IDENTIFIER      reduce using rule 10 (statement -> LOG expression .)
    FOR             reduce using rule 10 (statement -> LOG expression .)
    IF              reduce using rule 10 (statement -> LOG expression .)
    @               reduce using rule 10 (statement -> LOG expression .)
    KEYFRAMES       reduce using rule 10 (statement -> LOG expression .)
    ANIMATION       reduce using rule 10 (statement -> LOG expression .)
    FRAME           reduce using rule 10 (statement -> LOG expression .)
    }               reduce using rule 10 (statement -> LOG expression .)
    $end            reduce using rule 10 (statement -> LOG expression .)
    ADD_OP          shift and go to state 36
    MUL_OP          shift and go to state 34
    MOD             shift and go to state 39
    IS              shift and go to state 35
    <               shift and go to state 38
    >               shift and go to state 37


state 24

    (16) frame -> FRAME ( . expression ) { programme }
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MUL_OP expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression IS expression
    (21) expression -> . expression < expression
    (22) expression -> . expression > expression
    (23) expression -> . NUMBER
    (24) expression -> . IDENTIFIER
    (25) expression -> . STRING
    (26) expression -> . ( expression )
    (27) expression -> . ADD_OP expression

    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 18
    STRING          shift and go to state 22
    (               shift and go to state 19
    ADD_OP          shift and go to state 21

    expression                     shift and go to state 40

state 25

    (2) programme -> statement programme .

    $end            reduce using rule 2 (programme -> statement programme .)
    }               reduce using rule 2 (programme -> statement programme .)


state 26

    (13) css -> @ STRING .

    LOG             reduce using rule 13 (css -> @ STRING .)
    IDENTIFIER      reduce using rule 13 (css -> @ STRING .)
    FOR             reduce using rule 13 (css -> @ STRING .)
    IF              reduce using rule 13 (css -> @ STRING .)
    @               reduce using rule 13 (css -> @ STRING .)
    KEYFRAMES       reduce using rule 13 (css -> @ STRING .)
    ANIMATION       reduce using rule 13 (css -> @ STRING .)
    FRAME           reduce using rule 13 (css -> @ STRING .)
    }               reduce using rule 13 (css -> @ STRING .)
    $end            reduce using rule 13 (css -> @ STRING .)


state 27

    (12) structure -> FOR expression . TO expression BY expression { programme }
    (17) expression -> expression . ADD_OP expression
    (18) expression -> expression . MUL_OP expression
    (19) expression -> expression . MOD expression
    (20) expression -> expression . IS expression
    (21) expression -> expression . < expression
    (22) expression -> expression . > expression

    TO              shift and go to state 41
    ADD_OP          shift and go to state 36
    MUL_OP          shift and go to state 34
    MOD             shift and go to state 39
    IS              shift and go to state 35
    <               shift and go to state 38
    >               shift and go to state 37


state 28

    (15) animation -> ANIMATION ( . STRING , STRING ) { programme }

    STRING          shift and go to state 42


state 29

    (11) condition -> IF expression . { programme }
    (17) expression -> expression . ADD_OP expression
    (18) expression -> expression . MUL_OP expression
    (19) expression -> expression . MOD expression
    (20) expression -> expression . IS expression
    (21) expression -> expression . < expression
    (22) expression -> expression . > expression

    {               shift and go to state 43
    ADD_OP          shift and go to state 36
    MUL_OP          shift and go to state 34
    MOD             shift and go to state 39
    IS              shift and go to state 35
    <               shift and go to state 38
    >               shift and go to state 37


state 30

    (28) assignation -> IDENTIFIER : . expression
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MUL_OP expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression IS expression
    (21) expression -> . expression < expression
    (22) expression -> . expression > expression
    (23) expression -> . NUMBER
    (24) expression -> . IDENTIFIER
    (25) expression -> . STRING
    (26) expression -> . ( expression )
    (27) expression -> . ADD_OP expression

    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 18
    STRING          shift and go to state 22
    (               shift and go to state 19
    ADD_OP          shift and go to state 21

    expression                     shift and go to state 44

state 31

    (14) keyframes -> KEYFRAMES { . programme }
    (1) programme -> . statement
    (2) programme -> . statement programme
    (3) statement -> . assignation
    (4) statement -> . structure
    (5) statement -> . condition
    (6) statement -> . css
    (7) statement -> . keyframes
    (8) statement -> . animation
    (9) statement -> . frame
    (10) statement -> . LOG expression
    (28) assignation -> . IDENTIFIER : expression
    (12) structure -> . FOR expression TO expression BY expression { programme }
    (11) condition -> . IF expression { programme }
    (13) css -> . @ STRING
    (14) keyframes -> . KEYFRAMES { programme }
    (15) animation -> . ANIMATION ( STRING , STRING ) { programme }
    (16) frame -> . FRAME ( expression ) { programme }

    LOG             shift and go to state 1
    IDENTIFIER      shift and go to state 14
    FOR             shift and go to state 10
    IF              shift and go to state 13
    @               shift and go to state 9
    KEYFRAMES       shift and go to state 16
    ANIMATION       shift and go to state 11
    FRAME           shift and go to state 4

    assignation                    shift and go to state 15
    frame                          shift and go to state 2
    condition                      shift and go to state 12
    keyframes                      shift and go to state 3
    animation                      shift and go to state 5
    css                            shift and go to state 8
    statement                      shift and go to state 7
    structure                      shift and go to state 6
    programme                      shift and go to state 45

state 32

    (26) expression -> ( expression . )
    (17) expression -> expression . ADD_OP expression
    (18) expression -> expression . MUL_OP expression
    (19) expression -> expression . MOD expression
    (20) expression -> expression . IS expression
    (21) expression -> expression . < expression
    (22) expression -> expression . > expression

    )               shift and go to state 46
    ADD_OP          shift and go to state 36
    MUL_OP          shift and go to state 34
    MOD             shift and go to state 39
    IS              shift and go to state 35
    <               shift and go to state 38
    >               shift and go to state 37


state 33

    (27) expression -> ADD_OP expression .
    (17) expression -> expression . ADD_OP expression
    (18) expression -> expression . MUL_OP expression
    (19) expression -> expression . MOD expression
    (20) expression -> expression . IS expression
    (21) expression -> expression . < expression
    (22) expression -> expression . > expression

    ADD_OP          reduce using rule 27 (expression -> ADD_OP expression .)
    MUL_OP          reduce using rule 27 (expression -> ADD_OP expression .)
    MOD             reduce using rule 27 (expression -> ADD_OP expression .)
    IS              reduce using rule 27 (expression -> ADD_OP expression .)
    <               reduce using rule 27 (expression -> ADD_OP expression .)
    >               reduce using rule 27 (expression -> ADD_OP expression .)
    LOG             reduce using rule 27 (expression -> ADD_OP expression .)
    IDENTIFIER      reduce using rule 27 (expression -> ADD_OP expression .)
    FOR             reduce using rule 27 (expression -> ADD_OP expression .)
    IF              reduce using rule 27 (expression -> ADD_OP expression .)
    @               reduce using rule 27 (expression -> ADD_OP expression .)
    KEYFRAMES       reduce using rule 27 (expression -> ADD_OP expression .)
    ANIMATION       reduce using rule 27 (expression -> ADD_OP expression .)
    FRAME           reduce using rule 27 (expression -> ADD_OP expression .)
    $end            reduce using rule 27 (expression -> ADD_OP expression .)
    }               reduce using rule 27 (expression -> ADD_OP expression .)
    TO              reduce using rule 27 (expression -> ADD_OP expression .)
    {               reduce using rule 27 (expression -> ADD_OP expression .)
    )               reduce using rule 27 (expression -> ADD_OP expression .)
    BY              reduce using rule 27 (expression -> ADD_OP expression .)

  ! ADD_OP          [ shift and go to state 36 ]
  ! MUL_OP          [ shift and go to state 34 ]
  ! MOD             [ shift and go to state 39 ]
  ! IS              [ shift and go to state 35 ]
  ! <               [ shift and go to state 38 ]
  ! >               [ shift and go to state 37 ]


state 34

    (18) expression -> expression MUL_OP . expression
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MUL_OP expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression IS expression
    (21) expression -> . expression < expression
    (22) expression -> . expression > expression
    (23) expression -> . NUMBER
    (24) expression -> . IDENTIFIER
    (25) expression -> . STRING
    (26) expression -> . ( expression )
    (27) expression -> . ADD_OP expression

    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 18
    STRING          shift and go to state 22
    (               shift and go to state 19
    ADD_OP          shift and go to state 21

    expression                     shift and go to state 47

state 35

    (20) expression -> expression IS . expression
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MUL_OP expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression IS expression
    (21) expression -> . expression < expression
    (22) expression -> . expression > expression
    (23) expression -> . NUMBER
    (24) expression -> . IDENTIFIER
    (25) expression -> . STRING
    (26) expression -> . ( expression )
    (27) expression -> . ADD_OP expression

    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 18
    STRING          shift and go to state 22
    (               shift and go to state 19
    ADD_OP          shift and go to state 21

    expression                     shift and go to state 48

state 36

    (17) expression -> expression ADD_OP . expression
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MUL_OP expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression IS expression
    (21) expression -> . expression < expression
    (22) expression -> . expression > expression
    (23) expression -> . NUMBER
    (24) expression -> . IDENTIFIER
    (25) expression -> . STRING
    (26) expression -> . ( expression )
    (27) expression -> . ADD_OP expression

    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 18
    STRING          shift and go to state 22
    (               shift and go to state 19
    ADD_OP          shift and go to state 21

    expression                     shift and go to state 49

state 37

    (22) expression -> expression > . expression
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MUL_OP expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression IS expression
    (21) expression -> . expression < expression
    (22) expression -> . expression > expression
    (23) expression -> . NUMBER
    (24) expression -> . IDENTIFIER
    (25) expression -> . STRING
    (26) expression -> . ( expression )
    (27) expression -> . ADD_OP expression

    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 18
    STRING          shift and go to state 22
    (               shift and go to state 19
    ADD_OP          shift and go to state 21

    expression                     shift and go to state 50

state 38

    (21) expression -> expression < . expression
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MUL_OP expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression IS expression
    (21) expression -> . expression < expression
    (22) expression -> . expression > expression
    (23) expression -> . NUMBER
    (24) expression -> . IDENTIFIER
    (25) expression -> . STRING
    (26) expression -> . ( expression )
    (27) expression -> . ADD_OP expression

    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 18
    STRING          shift and go to state 22
    (               shift and go to state 19
    ADD_OP          shift and go to state 21

    expression                     shift and go to state 51

state 39

    (19) expression -> expression MOD . expression
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MUL_OP expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression IS expression
    (21) expression -> . expression < expression
    (22) expression -> . expression > expression
    (23) expression -> . NUMBER
    (24) expression -> . IDENTIFIER
    (25) expression -> . STRING
    (26) expression -> . ( expression )
    (27) expression -> . ADD_OP expression

    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 18
    STRING          shift and go to state 22
    (               shift and go to state 19
    ADD_OP          shift and go to state 21

    expression                     shift and go to state 52

state 40

    (16) frame -> FRAME ( expression . ) { programme }
    (17) expression -> expression . ADD_OP expression
    (18) expression -> expression . MUL_OP expression
    (19) expression -> expression . MOD expression
    (20) expression -> expression . IS expression
    (21) expression -> expression . < expression
    (22) expression -> expression . > expression

    )               shift and go to state 53
    ADD_OP          shift and go to state 36
    MUL_OP          shift and go to state 34
    MOD             shift and go to state 39
    IS              shift and go to state 35
    <               shift and go to state 38
    >               shift and go to state 37


state 41

    (12) structure -> FOR expression TO . expression BY expression { programme }
    (17) expression -> . expression ADD_OP expression
    (18) expression -> . expression MUL_OP expression
    (19) expression -> . expression MOD expression
    (20) expression -> . expression IS expression
    (21) expression -> . expression < expression
    (22) expression -> . expression > expression
    (23) expression -> . NUMBER
    (24) expression -> . IDENTIFIER
    (25) expression -> . STRING
    (26) expression -> . ( expression )
    (27) expression -> . ADD_OP expression

    NUMBER          shift and go to state 20
    IDENTIFIER      shift and go to state 18
    STRING          shift and go to state 22
    (               shift and go to state 19
    ADD_OP          shift and go to state 21

    expression                     shift and go to state 54

state 42

    (15) animation -> ANIMATION ( STRING . , STRING ) { programme }

    ,               shift and go to state 55


state 43

    (11) condition -> IF expression { . programme }
    (1) programme -> . statement
    (2) programme -> . statement programme
    (3) statement -> . assignation
    (4) statement -> . structure
    (5) statement -> . condition
    (6) statement -> . css
    (7) statement -> . keyframes
    (8) statement -> . animation
    (9) statement -> . frame
    (10) statement -> . LOG expression
    (28) assignation -> . IDENTIFIER : expression
    (12) structure -> . FOR expression TO expression BY expression { programme }
    (11) condition -> . IF expression { programme }
    (13) css -> . @ STRING
    (14) keyframes -> . KEYFRAMES { programme }
    (15) animation -> . ANIMATION ( STRING , STRING ) { programme }
    (16) frame -> . FRAME ( expression ) { programme }

    LOG             shift and go to state 1
    IDENTIFIER      shift and go to state 14
    FOR             shift and go to state 10
    IF              shift and go to state 13
    @               shift and go to state 9
    KEYFRAMES       shift and go to state 16
    ANIMATION       shift and go to state 11
    FRAME           shift and go to state 4

    assignation                    shift and go to state 15
    frame                          shift and go to state 2
    keyframes                      shift and go to state 3
    animation                      shift and go to state 5
    condition                      shift and go to state 12
    statement                      shift and go to state 7
    css                            shift and go to state 8
    structure                      shift and go to state 6
    programme                      shift and go to state 56

state 44

    (28) assignation -> IDENTIFIER : expression .
    (17) expression -> expression . ADD_OP expression
    (18) expression -> expression . MUL_OP expression
    (19) expression -> expression . MOD expression
    (20) expression -> expression . IS expression
    (21) expression -> expression . < expression
    (22) expression -> expression . > expression

    LOG             reduce using rule 28 (assignation -> IDENTIFIER : expression .)
    IDENTIFIER      reduce using rule 28 (assignation -> IDENTIFIER : expression .)
    FOR             reduce using rule 28 (assignation -> IDENTIFIER : expression .)
    IF              reduce using rule 28 (assignation -> IDENTIFIER : expression .)
    @               reduce using rule 28 (assignation -> IDENTIFIER : expression .)
    KEYFRAMES       reduce using rule 28 (assignation -> IDENTIFIER : expression .)
    ANIMATION       reduce using rule 28 (assignation -> IDENTIFIER : expression .)
    FRAME           reduce using rule 28 (assignation -> IDENTIFIER : expression .)
    $end            reduce using rule 28 (assignation -> IDENTIFIER : expression .)
    }               reduce using rule 28 (assignation -> IDENTIFIER : expression .)
    ADD_OP          shift and go to state 36
    MUL_OP          shift and go to state 34
    MOD             shift and go to state 39
    IS              shift and go to state 35
    <               shift and go to state 38
    >               shift and go to state 37


state 45

    (14) keyframes -> KEYFRAMES { programme . }

    }               shift and go to state 57


state 46

    (26) expression -> ( expression ) .
